# webstack

./: .gitignore  README.md
documentation/: diagram.drawio
gateway/: README.md  docker-compose.yml
gateway/script/: down.ps1  down.sh  install.ps1  install.sh  monitor.sh  start.ps1  start.sh  stop.ps1  stop.sh  uninstall.ps1  uninstall.sh  up.ps1  up.sh
gateway/source/certificate_letsencrypt/: Dockerfile.certbot  README.md  docker-compose.yml
gateway/source/certificate_openssl/: .gitignore  generate_ca.sh
gateway/source/iam_keycloak/: docker-compose.yml
gateway/source/proxy_openresty/: Dockerfile.openresty  generate_ca.sh  nginx.conf
hub/: README.md  docker-compose.yml
hub/script/: down.ps1  down.sh  install.ps1  install.sh  monitor.sh  start.ps1  start.sh  stop.ps1  stop.sh  uninstall.ps1  uninstall.sh  up.ps1  up.sh
hub/source/api_fastapi/: .gitignore  docker-compose.yml  main.py  requirements.txt
hub/source/certificate_openssl/: generate_cert.sh
hub/source/database_postgres/: docker-compose.yml  initdb.sql
hub/source/proxy_openresty/: .gitignore  (+4 more)
hub/source/worker_celery/task/dummy/: pyproject.toml
hub/source/worker_celery/task/dummy/src/dummy/: __init__.py
hub/source/worker_celery/task/dummy/tests/: test_basic.py
service/: README.md  docker-compose.yml
service/script/: down.ps1  down.sh  install.ps1  install.sh  monitor.ps1  start.ps1  start.sh  stop.ps1  stop.sh  uninstall.ps1  uninstall.sh  up.ps1  up.sh
service/source/worker_celery/task/classifier/: .gitignore  LICENSE  README.md  infer.py  model.py  pyproject.toml  train.py
(+46 files in other folders)
